[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warmy-mcp"
version = "0.1.0"
description = "MCP server for Warmy — manage email templates and deliverability from Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
    "python-dotenv",
]

[project.scripts]
warmy-mcp = "main:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py"]
